@@ -165,6 +165,7 @@ fixed bugs:
 - fixed bug with objective limit in lp.c: previously the infinity value of SCIP was used as default - now the value of LPI is used. In the earlier version in many cases the problems where never infeasible.
 - added and adjusted some asserts, initialized some values
 - fixed bug in presol.c caused by not reseting presolver-wasdelayed status
+- fixed bug in solve.c caused by integer overflow due to setting the number of cuts to INT_MAX
 
 plugins:
 - added interface to QSopt due to Daniel Espinoza
